# embedded-life

./: Cargo.toml  README.md  build.sh
life/: Cargo.toml
life-hal/: Cargo.toml
life-hal/src/: lib.rs
life-maple-mini/: Cargo.toml  build-and-flash.sh  build.rs  memory.x
life-maple-mini/src/: main.rs
life-raspi/: Cargo.toml
life-raspi/.cargo/: config.toml
life-raspi/src/: main.rs
life-simulator/: Cargo.toml
life-simulator/src/: main.rs
life/src/: lib.rs
